kube-specs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kv-store
  namespace: kv
spec:
  selector:
    matchLabels:
      app: kv-store
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: kv-store
    spec:
      containers:
        - name: kv-store
          image: "kv-store-image:version" ### Replace the value with actual image name and version
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /ping
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
      terminationGracePeriodSeconds: 60
