kube-specs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kv-store
  namespace: kv
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: kv-store
